# newlib

./: .gitmodules  buildme-frosted.sh  buildme.sh  config.sub  install_to.sh
libgloss/: configure.in
libgloss/arm-frosted/: Makefile.in  configure  configure.in  crt0.c  exit.c  fork.c  svc.s  wait.c
libgloss/arm-frosted/include/: signal.h
newlib/: Makefile.am  Makefile.in  configure  configure.host
newlib/libc/include/: errno.h  locale.h  stdio.h
newlib/libc/include/sys/: errno.h
newlib/libc/reent/: impure.c
newlib/libc/stdlib/: malloc.c
newlib/libc/sys/: aclocal.m4  configure  configure.in
newlib/libc/sys/a29khif/: configure
newlib/libc/sys/frosted/: Makefile.am  Makefile.in  accept.c  aclocal.m4  basename.c  bind.c  chdir.c  chroot.c  close.c  closedir.c  configure  configure.in  connect.c  crt0.c  crtn.c  dirname.c  dup.c  dup2.c  exec.c  exit.c  fcntl.c  fgets.c  fork.c  free.c  fstat.c  getaddrinfo.c  getcwd.c  gethostname.c  getlogin.c  getpeername.c  getpid.c  getppid.c  getpriority.c  getsockname.c  getsockopt.c  gettimeofday.c  grp.c  inet.c  ioctl.c  isatty.c  (+62 more)
newlib/libc/sys/frosted/include/: dirent.h  endian.h  errno.h  frosted_api.h  glob.h  poll.h  pthread.h  resource.h  semaphore.h  signal.h  syscall_table.h  syscalls.h  time.h
newlib/libc/sys/frosted/include/net/: if.h  route.h
newlib/libc/sys/frosted/include/netinet/: in.h  ip_icmp.h
newlib/libc/sys/frosted/include/sys/: _default_fcntl.h  frosted-io.h  frosted.h  ioctl.h  mman.h  mount.h  pthread.h  ptrace.h  pty.h  reboot.h  resource.h  select.h  socket.h  stat.h  syscall.h  syslimits.h  termios.h  time.h  types.h  un.h  user.h  utsname.h
newlib/libc/sys/rdos/: configure
